# goph419-f2024-lab02-stSP

./: README.md  pyproject.toml
data/: air_density_vs_temp_eng_toolbox.txt  water_density_vs_temp_usgs.txt
examples/: driver.py
src/lab02/: __init__.py  linalg_interp.py
tests/: tests.py
